changed remote for steps

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,6 @@
-<h2 id="title">Welcome to Ember.js</h2>
+<div class="container">
+  <h2 id="title">Idea Box </h2>
 
-{{outlet}}
+  {{!-- Outlet = yield in ruby --}}
+  {{outlet}}
+</div>
