--- a/app/templates/ideas.hbs
+++ b/app/templates/ideas.hbs
@@ -13,10 +13,7 @@
 
 <section id="ideas">
   {{#each model as |idea| }}
-    <div class="idea">
-      <h2>{{idea.title}}</h2>
-      <p>{{idea.body}}</p>
-    </div>
+    {{awesome-idea idea=idea}}
   {{/each}}
 </section>
 
